--- a/bilibili-lite/src/h/header.styl
+++ b/bilibili-lite/src/h/header.styl
@@ -28,6 +28,18 @@
 .news-notice-panel .news-notice .more .icon-font
   color var(--c-title) !important
 
+.link-navbar.black .nav-item .label
+.link-navbar.black .my-link-btn .label
+.link-navbar.black .shortcuts-ctnr .shortcuts-ctnr-ul .shortcut-item .label-wrapper .label .text
+.link-navbar.black .publish-btn
+  color var(--c-white) !important
+
+.link-navbar.black .nav-item:hover .label
+.link-navbar.black .my-link-btn:hover .label
+.link-navbar.black .shortcuts-ctnr .shortcuts-ctnr-ul .shortcut-item:hover .label-wrapper .label .text
+.link-navbar.black .publish-btn:hover
+  color var(--c-accent) !important
+
 .shortcuts-ctnr
   margin 0 !important
 
