--- a/bilibili-lite/src/home/header.styl
+++ b/bilibili-lite/src/home/header.styl
@@ -14,6 +14,8 @@
 .international-home .bili-header-m .nav-search .nav-search-btn:hover
 .international-home .international-header .nav-search .nav-search-btn:hover
 .international-home .nav-link .nav-link-ul .nav-link-item .link:hover
+.international-home .mini-header .mini-upload:hover
+.international-home .mini-header .nav-user-center .user-con .item .name:hover
 	color var(--c-accent) !important
 
 .international-home .bili-header-m .nav-search-box
@@ -61,6 +63,10 @@
 .bili-banner
 	max-height 220px
 	background-color var(--c-background) !important
+
+.bili-banner .head-title
+	background-color var(--c-hover) !important
+	color var(--c-white) !important
 
 .bili-banner .taper-line
 	background-color none !important
