--- a/bilibili-lite/src/manga/header.styl
+++ b/bilibili-lite/src/manga/header.styl
@@ -14,7 +14,11 @@
 
 .search-bar .search-bar-bg
 .drop-list .more-btn-container:hover
+.user-panel .drop-list .logout-btn-container .logout-button:hover
   background-color var(--c-hover) !important
+
+nav.manga-navbar .right-part .drop-list .size-ruler a button
+  color var(--c-title) !important
 
 .search-bar .search-input
   background-color transparent !important
@@ -22,6 +26,19 @@
 nav.manga-navbar.p-fixed.p-zero a button
 nav.manga-navbar.p-fixed.p-zero a button span
   color var(--c-white) !important
+
+.nav-list a:hover .nav-item span
+.manga-navbar-history-list:hover .action-button
+.manga-navbar-favourite-manga:hover .action-button
+nav.manga-navbar.p-fixed.p-zero a:hover button
+nav.manga-navbar.p-fixed.p-zero a:hover button span
+  color var(--c-accent) !important
+
+.right-part .drop-list .size-ruler
+  border 1px solid var(--c-border)
+  border-top-width 0
+  border-radius 0 0 10px 10px
+  overflow hidden
 
 .manga-navbar
   box-shadow none !important
