--- a/bilibili-lite/src/manga/ranking.styl
+++ b/bilibili-lite/src/manga/ranking.styl
@@ -1,29 +1,29 @@
 /* 排行榜 */
 .arrow
-  display: none !important
+  display none !important
 
 .sidebar-item
-  text-align: center
+  text-align center
 
 .sidebar-container
-  width: 100px !important
+  width 100px !important
 
 .rank-item-wrapper
-  background-image: none !important
+  background-image none !important
 
 .app-layout .main-container
-  margin-top: 70px !important
+  margin-top 70px !important
 
 .sidebar-ctnr
-  margin-top: 100px !important
-  border: 0 !important
+  margin-top 100px !important
+  border 0 !important
 
 .sidebar-item.activated
 .sidebar-item:hover
-  border-radius: 10px
-  background-color: var(--c-hover) !important
+  border-radius 10px
+  background-color var(--c-hover) !important
   transition background-color 0.3s ease-in-out
 
   span
-    color: var(--c-accent) !important
+    color var(--c-accent) !important
     transition color 0.3s ease-in-out
