--- a/bilibili-lite/src/public/form.styl
+++ b/bilibili-lite/src/public/form.styl
@@ -23,7 +23,7 @@
 .s-item.active
 .s-item:hover
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .player-auxiliary-danmaku-date-picker-week .day-span
-  color: var(--c-title) !important
+  color var(--c-title) !important
 
 .date-picker-v2-container i
 select
@@ -52,7 +52,7 @@ select
   border-color var(--c-accent) !important
 
 .player-auxiliary-danmaku-date-picker-container .player-auxiliary-danmaku-date-picker-body .day-span
-  border: none !important
+  border none !important
 
 /* 弹窗 */
 .area-selector
