--- a/bilibili-lite/src/search/base.styl
+++ b/bilibili-lite/src/search/base.styl
@@ -17,7 +17,7 @@
 .home-wrap .home-input .type.selected
 .home-wrap .home-input .type:hover
 .suggest-wrap .horizontal .hz-text:hover
-  background-color: var(--c-hover)
+  background-color var(--c-hover)
 
 #navigator .v-switcher-header-anchor
 .home-wrap .home-suggest .hot-search .item .num.special
@@ -63,7 +63,7 @@
   border-color var(--c-border)
 
 .suggest-wrap .horizontal .hz-text:hover
-  border-color: var(--c-accent)
+  border-color var(--c-accent)
 
 .bangumi-item .right-info .headline .bangumi-label
 .video-item.list .type
@@ -75,14 +75,14 @@
   border 1px solid var(--c-border)
 
 .home-wrap .home-suggest .title
-  margin: 0
+  margin 0
 
 .home-wrap .home-suggest
 .home-wrap .home-input .type.selected
 .home-wrap .home-input .type:hover
 .home-wrap .home-logo
 .home-wrap .home-suggest .history.no-bg
-  background-image: none
+  background-image none
 
 em.keyword
   background-color transparent !important
@@ -96,7 +96,7 @@ em.keyword
 .home-wrap .home-input .type .default
 .pager .pages .page-item.last
 .pager .pages .page-item.next
-  border: 0 !important
+  border 0 !important
   background-color transparent !important
 
   &::after
