--- a/bilibili-lite/src/space/video.styl
+++ b/bilibili-lite/src/space/video.styl
@@ -30,7 +30,7 @@
   color var(--c-accent) !important
 
 .be-pager-item-active a
-  color: var(--c-white) !important
+  color var(--c-white) !important
 
 .list-item
 #page-follows .follow-sidenav .nav-container.follow-container
@@ -79,7 +79,7 @@
 
 /* 收藏 */
 #page-fav .fav-main .filter-item .filter-type
-  padding: 0
+  padding 0
   width auto
 
 #page-fav .fav-main .filter-item .filter-type .be-dropdown-item
