--- a/bilibili-lite/src/v/base.styl
+++ b/bilibili-lite/src/v/base.styl
@@ -58,13 +58,13 @@
 	color var(--c-accent)
 
 .sub-nav-m ul li.on a
-	color: var(--c-accent) !important
+	color var(--c-accent) !important
 
 .carousel-module .panel .title a
 .groom-module .card-mark .title
 .groom-module .card-mark .author
 .groom-module .card-mark .play
-	color: var(--c-white) !important
+	color var(--c-white) !important
 
 .primary-menu.border-b
 .cinema-home-crumb ul li
