--- a/bilibili-lite/src/v/index.styl
+++ b/bilibili-lite/src/v/index.styl
@@ -5,7 +5,8 @@ url-prefix("https://www.bilibili.com/cinema/"),
 url-prefix("https://www.bilibili.com/documentary/"),
 url-prefix("https://www.bilibili.com/movie/"),
 url-prefix("https://www.bilibili.com/tv/"),
-url-prefix("https://www.bilibili.com/blackboard/") {
+url-prefix("https://www.bilibili.com/blackboard/"),
+url-prefix("https://www.bilibili.com/list/") {
 	/* 分区主页样式 */
 	@import 'header'
 	@import 'base'
