--- a/bilibili-lite/src/v/list.styl
+++ b/bilibili-lite/src/v/list.styl
@@ -1,19 +1,42 @@
-/* 列表页 */
+/* 列表页 推荐 */
 .tag-list-wrp .title .icon
 .video-floor-m .dynamic-title .title .icon
 .tag-list-wrp .title .small
 .tag-more
+.zr_recomd .b-head .b-head-i
+.footer .footer-wrp
   display none
+
+.zr_recomd ul li
+.zr_recomd .zr_user .uin .r_info em
+  background-color transparent !important
+
+.b-head .b-head-t
+  color var(--c-title) !important
+
+.zr_recomd .zr_tvideo .q
+.zr_recomd .zr_user .uin .r_info em
+.widescreen .container-body div:last-child
+  color var(--c-text) !important
+
+.tag-list li.tag-item.on
+  color var(--c-white) !important
 
 .video-list .vl-hd
 .video-list .vl-hd .s-line
 .mod-1 .r
 .mod-2 li
 .mod-2 li .l-item
+.primary-menu
+.zr_recomd ul li
+.zr_recomd .b-head
   border-color var(--c-border)
 
-.tag-list li.tag-item.on
-  color var(--c-white) !important
+.widescreen .container-body div:last-child h2
+  border 0 !important
+
+.zr_recomd .zr_user .uin .r_info em
+  line-height initial
 
 .video-floor-m .dynamic-title .read-push
   border 0
