--- a/bilibili-lite/src/account/history.styl
+++ b/bilibili-lite/src/account/history.styl
@@ -1,15 +1,15 @@
 /* 观看历史 */
 .bili-footer
-  display: none !important
+  display none !important
 
 .history-list .cover-contain .progress-c
-  background-color: var(--c-hover) !important
+  background-color var(--c-hover) !important
 
 .history-list .r-info
   background-color transparent !important
 
 .history-list .cover-contain .progress
-  background-color: var(--c-accent) !important
+  background-color var(--c-accent) !important
 
 .history-wrap .b-head .b-head-t
   color var(--c-title) !important
@@ -19,9 +19,14 @@
 .nav-user-center .user-con .item .name
   color var(--c-white) !important
 
+.nav-link-item .link:hover
+.mini-upload:hover
+.nav-user-center .user-con .item .name:hover
+  color var(--c-accent) !important
+
 .history-list .l-info
 .history-list .r-info .r-txt
-  border-color: var(--c-border) !important
+  border-color var(--c-border) !important
 
 .history-list .l-info .lastplay-time .history-red-round
   border-left-color var(--c-border) !important
@@ -31,7 +36,7 @@
   height 2px
 
 .go-top-m .go-top
-  background-position: -714px -72px !important
+  background-position -714px -72px !important
 
 /* 侧边时间轴 */
 .history-wrap .time-label
@@ -65,41 +70,41 @@
 /* 导航搜索 */
 .bili-header-m .nav-search-box
 .international-header .nav-search-box
-	position absolute
-	top 100px
-	left 50%
-	transform translateX(-50%)
+  position absolute
+  top 100px
+  left 50%
+  transform translateX(-50%)
 
 .bili-header-m .nav-search
 .international-header .nav-search
-	margin 0 auto
-	width 520px
+  margin 0 auto
+  width 520px
 
 .bili-header-m .nav-search #nav_searchform
 .international-header .nav-search #nav_searchform
-	padding 0 60px 0 20px
-	border 0
-	border-radius 25px
-	background-color rgba(0, 0, 0, 0.4) !important
-	overflow hidden
+  padding 0 60px 0 20px
+  border 0
+  border-radius 25px
+  background-color rgba(0, 0, 0, 0.4) !important
+  overflow hidden
 
 .bili-header-m .nav-search .nav-search-keyword
 .international-header .nav-search .nav-search-keyword
-	height 50px
-	font-size 16px
-	color var(--c-white)
+  height 50px
+  font-size 16px
+  color var(--c-white)
 
 .bili-header-m .nav-search .nav-search-submit
 .international-header .nav-search .nav-search-submit
-	top 0
-	right 20px
-	font-size 24px
-	color var(--c-white) !important
-	line-height 50px
+  top 0
+  right 20px
+  font-size 24px
+  color var(--c-white) !important
+  line-height 50px
 
 .bili-header-m .nav-search .nav-search-btn
 .international-header .nav-search .nav-search-btn
-	width 60px
-	height 50px
-	border-radius 0 25px 25px 0
-	background-color rgba(0, 0, 0, 0.6) !important
+  width 60px
+  height 50px
+  border-radius 0 25px 25px 0
+  background-color rgba(0, 0, 0, 0.6) !important
