--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -57,6 +57,7 @@ em:not(.icon)
 .project-list .project-list-item .promo-item
 .type-label
 .history-list .cover-contain .label
+.my-link-btn .hint-count
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
