--- a/bilibili-lite/src/v/header.styl
+++ b/bilibili-lite/src/v/header.styl
@@ -1,9 +1,15 @@
 /* 导航 */
-.bili-header-m .nav-menu .nav-con .nav-item .t
-.bili-header-m .nav-menu .up-load .u-link
-	color: var(--c-white) !important
+.bili-header-m .search .search-keyword
+	background-color transparent !important
 
-.bili-header-m .nav-menu .nav-mask
+.bili-header-m .nav-menu .blur-bg+.nav-mask+.nav-wrapper .nav-con .nav-item .t
+.bili-header-m .nav-menu .blur-bg+.nav-mask+.nav-wrapper .up-load .u-link
+	color var(--c-white) !important
+
+	&:hover
+		color var(--c-accent) !important
+
+.bili-header-m .nav-menu .blur-bg+.nav-mask
 	border 0
 	background-color var(--c-bg-header)
 	backdrop-filter blur(5px)
@@ -40,7 +46,7 @@
 .bili-header-m .search button.search-submit
 	width 60px
 	height 100%
-	border-radius: 0 25px 25px 0
+	border-radius 0 25px 25px 0
 	background-color rgba(0, 0, 0, 0.6) !important
 	background-position -647px -712px
 
