--- a/bilibili-lite/src/account/base.styl
+++ b/bilibili-lite/src/account/base.styl
@@ -85,6 +85,10 @@
 .face-nav>.active a
 .coin-num
 .my-moral i
+li.security-list.on span
+li.security-list:hover span
+.security-list .child-list li a.bg-blue span
+.security-list .child-list li a:hover span
   color var(--c-accent) !important
 
 .index-info
@@ -162,6 +166,7 @@
   background-color var(--c-hover) !important
 
 .security-list
+  border-radius 10px
   text-align center
   transition background-color 0.3s ease-in-out !important
 
@@ -173,6 +178,7 @@
 .go-movie
 .tool-change-face
 .invitation-btn
+.coupon-content-con .coupon-btn
   position absolute !important
 
 .tabs-nav .active
