--- a/bilibili-lite/src/live/header.styl
+++ b/bilibili-lite/src/live/header.styl
@@ -63,6 +63,7 @@
   box-shadow none !important
 
 .head-content .link-navbar
+.app-ctnr .link-navbar
   border-bottom 1px solid var(--c-border) !important
 
 .nav-ctnr .link-navbar
