--- a/bilibili-lite/src/live/room.styl
+++ b/bilibili-lite/src/live/room.styl
@@ -132,10 +132,19 @@
 .captcha-widget .submit-btn button
 	width 100% !important
 
+.count-choice .send-button
+	vertical-align middle
+
 .right-action-ctnr
 .live-skin-highlight-text
+.awarding-panel .close-btn
+.awarding-panel .info-section .slide-btn
+.captcha-widget .refresh-captcha
 	background-color transparent !important
 	color var(--c-text) !important
+
+	&:hover
+		color var(--c-text) !important
 
 	span
 		color var(--c-text) !important
@@ -182,14 +191,6 @@
 	border-color var(--c-accent) !important
 	background-color var(--c-background) !important
 	color var(--c-accent) !important
-
-.bl-button--primary
-	background-color var(--c-accent) !important
-	color var(--c-white) !important
-
-.bl-button--primary:disabled
-	background-color #e9eaec !important
-	color #b4b4b4 !important
 
 @media (prefers-color-scheme: dark)
 	.live-player-ctnr.minimal
