--- a/bilibili-lite/src/public/background.styl
+++ b/bilibili-lite/src/public/background.styl
@@ -6,6 +6,7 @@ em:not(.icon)
 .bili-header-m .num
 .badge.pink
 .badge.is-vip
+.badge.type_0
 .ss-badge
 .primary-menu .nav-menu>li .num-wrap span
 .elevator .list-box .item.on
@@ -58,6 +59,7 @@ em:not(.icon)
 .type-label
 .history-list .cover-contain .label
 .my-link-btn .hint-count
+.gift-item-wrap .expiration
   border 0 !important
   background-color var(--c-accent) !important
   color var(--c-white) !important
