--- a/bilibili-lite/src/public/header.styl
+++ b/bilibili-lite/src/public/header.styl
@@ -213,6 +213,14 @@
 .van-popper-history .view-all:hover
 	background-color var(--c-hover) !important
 
+.dynamic-iframe
+	padding 0 !important
+	width 100% !important
+
+.dynamic-m
+	width 100% !important
+	box-shadow none !important
+
 /* 收藏弹窗 */
 .video-info .line-2
 	color var(--c-title) !important
