--- a/bilibili-lite/src/show/base.styl
+++ b/bilibili-lite/src/show/base.styl
@@ -210,7 +210,9 @@
 
   .login-out
     border-top 1px solid var(--c-border)
-    background-color var(--c-hover) !important
+
+    &:hover
+      background-color var(--c-hover) !important
 
     a
       display block
