--- a/bilibili-lite/src/space/video.styl
+++ b/bilibili-lite/src/space/video.styl
@@ -12,6 +12,9 @@
 #page-follows .follow-main .follow-action-bottom .follow-action-fixtop
   background-color var(--c-hover)
 
+#page-channel-index .no-channel-container em
+  background-color transparent !important
+
 .breadcrumb .item.cur
 #page-fav .fav-sidenav .nav-title .text
 #page-fav .fav-sidenav .favlist-title
