--- a/bilibili-lite/src/public/button.styl
+++ b/bilibili-lite/src/public/button.styl
@@ -93,6 +93,7 @@ button
 .confirm-paybtn.active
 .searchBtn
 .hsbtn .sure
+.coupon-btn
   position relative
   border-color var(--c-accent) !important
   background-color var(--c-accent) !important
@@ -202,6 +203,8 @@ button
 .confirm-paybtn
 .err-jump-btn
 .hsbtn .cancel
+.coupon-btn-disable
+.bl-button--primary:disabled
   border 1px solid var(--c-border) !important
   background-color var(--c-background) !important
   color var(--c-title) !important
@@ -216,6 +219,7 @@ button
   &:hover
     border-color var(--c-accent) !important
     background-color var(--c-hover) !important
+    color var(--c-text) !important
 
     span
       color var(--c-text) !important
